--- a/pandas_solution.ipynb
+++ b/pandas_solution.ipynb
@@ -236,56 +236,30 @@
     "    point = pandas.Dataframe(data = {'DISA': [temp], 'ALTITUDE': [alt], 'MASS': [mass], 'MACH': [speed],\n",
     "                                    objective: None})\n",
     "    \n",
-    "    def sort_after_distances(dataset):\n",
-    "        dataset['distance'] = distance.\n",
+    "    def sort_after_distances(dataset, point):\n",
+    "        dataset['distance'] = distance.sub(point).pow(2).sum(1).pow(0.5)    \n",
+    "        dist_sorted_dataset = dataset.sort_values('distance')     \n",
+    "        return dataset\n",
     "    \n",
-    "        X_train['distance'] = X_train.sub(test).pow(2).sum(1).pow(0.5)\n",
+    "    nbr_neighbours = 16 # number of closest neighbours\n",
+    "    df = sort_after_distances(X_train, point) # sort indices based on euclidean distance from point in question\n",
+    "    df = df[0:nbr_neighbours] # discard all but the closest points given by nbr_neighbours\n",
+    "    df = df.drop(['distance'],axis = 1) # drop distance vector\n",
+    "    df = df.reset_index()\n",
+    "    df.columns = ['index_', 'DISA', 'ALTITUDE', 'MASS', 'MACH']\n",
+    "    y_train.columns = ['index_', objective]\n",
+    "    df = df.join(y_train, on = 'index_', how = 'left') # add objective column\n",
+    "    df = df.drop(['index_'], axis=1)\n",
     "\n",
-    "        end = 16\n",
-    "        z = X_train.sort_values('distance').iloc[0:end]\n",
-    "        z = z.drop(['distance'],axis = 1)\n",
-    "        z = z.reset_index()\n",
-    "        z.columns = ['index_', 'DISA', 'ALTITUDE', 'MASS', 'MACH']\n",
-    "        y_train.columns = ['index_', 'FUELFLOW']\n",
-    "        z = z.join(y_train, on = 'index_', how = 'left')\n",
-    "        z = z.drop(['index_'], axis=1)\n",
-    "\n",
-    "        z_inter = z[0:1].append(test)\n",
-    "        z_inter = z_inter.append(z[2:end])\n",
-    "        z_inter\n",
-    "\n",
-    "    return y_inter.iloc[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 't' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-15-9fdc6612ae97>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'index_'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'DISA'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'ALTITUDE'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'MASS'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'MACH'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 't' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "t.columns = {'col1': [1, 2], 'col2': [3, 4]}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "point = pd.DataFrame(data = {'DISA': [1], 'ALTITUDE': [1], 'MASS': [1], 'MACH': [1],\n",
-    "                                    'objective': None})"
+    "    # add input point between closest and second closest neighbours in dataframe\n",
+    "    df_interp = df[0:1].append(test)\n",
+    "    df_interp = df_interp.append(df[2:end])\n",
+    "    \n",
+    "    # perform pandas' linear interpolation\n",
+    "    y_interp = df_interp.interpolate(method = 'linear')[objective]\n",
+    "    interpolated_objective = y_interp.iloc[1]\n",
+    "    \n",
+    "    return interpolated_objective"
    ]
   },
   {
