--- a/test_jepperson.ipynb
+++ b/test_jepperson.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time:  3.8594820499420166\n",
+      "Time:  3.638432025909424\n",
       "MSE:  0.03604559126773098\n"
      ]
     },
@@ -166,10 +166,6 @@
     "    \n",
     "end = time.time()\n",
     "\n",
-    "X_train = X_train.drop(['distance'], axis=1)\n",
-    "test = 0\n",
-    "y_check = 0\n",
-    " \n",
     "print('Time: ',end - start)\n",
     "print('MSE: ', mean_squared_error(output[0], output[1]))\n",
     "\n",
@@ -185,6 +181,159 @@
     "plt.subplot(1,2,2)\n",
     "sns.scatterplot(x='ALTITUDE', y= 'y_interpolate', data = X_test, color ='r')\n",
     "plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DISA</th>\n",
+       "      <th>ALTITUDE</th>\n",
+       "      <th>MASS</th>\n",
+       "      <th>MACH</th>\n",
+       "      <th>distance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>16090</td>\n",
+       "      <td>0.833333</td>\n",
+       "      <td>0.854271</td>\n",
+       "      <td>0.365854</td>\n",
+       "      <td>0.935484</td>\n",
+       "      <td>1.346489</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>11240</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.477387</td>\n",
+       "      <td>0.731707</td>\n",
+       "      <td>0.870671</td>\n",
+       "      <td>0.882779</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>58667</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>0.150754</td>\n",
+       "      <td>0.609756</td>\n",
+       "      <td>0.623279</td>\n",
+       "      <td>0.839605</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>54495</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.879397</td>\n",
+       "      <td>0.487805</td>\n",
+       "      <td>0.580645</td>\n",
+       "      <td>1.368779</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>40094</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>0.050251</td>\n",
+       "      <td>0.121951</td>\n",
+       "      <td>0.387097</td>\n",
+       "      <td>0.685064</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>39242</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.804020</td>\n",
+       "      <td>0.121951</td>\n",
+       "      <td>0.387097</td>\n",
+       "      <td>0.794301</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>73242</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.603015</td>\n",
+       "      <td>0.731707</td>\n",
+       "      <td>0.806452</td>\n",
+       "      <td>1.355839</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>22562</td>\n",
+       "      <td>0.166667</td>\n",
+       "      <td>0.829146</td>\n",
+       "      <td>0.121951</td>\n",
+       "      <td>0.983871</td>\n",
+       "      <td>1.081715</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>34308</td>\n",
+       "      <td>0.166667</td>\n",
+       "      <td>0.376884</td>\n",
+       "      <td>0.975610</td>\n",
+       "      <td>0.290323</td>\n",
+       "      <td>0.828799</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>22011</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.402010</td>\n",
+       "      <td>0.609756</td>\n",
+       "      <td>0.807127</td>\n",
+       "      <td>0.736870</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>78771 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           DISA  ALTITUDE      MASS      MACH  distance\n",
+       "16090  0.833333  0.854271  0.365854  0.935484  1.346489\n",
+       "11240  0.000000  0.477387  0.731707  0.870671  0.882779\n",
+       "58667  0.666667  0.150754  0.609756  0.623279  0.839605\n",
+       "54495  1.000000  0.879397  0.487805  0.580645  1.368779\n",
+       "40094  0.666667  0.050251  0.121951  0.387097  0.685064\n",
+       "...         ...       ...       ...       ...       ...\n",
+       "39242  0.000000  0.804020  0.121951  0.387097  0.794301\n",
+       "73242  1.000000  0.603015  0.731707  0.806452  1.355839\n",
+       "22562  0.166667  0.829146  0.121951  0.983871  1.081715\n",
+       "34308  0.166667  0.376884  0.975610  0.290323  0.828799\n",
+       "22011  0.000000  0.402010  0.609756  0.807127  0.736870\n",
+       "\n",
+       "[78771 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train"
    ]
   },
   {
