--- a/testing/RICH_test_jepperson.ipynb
+++ b/testing/RICH_test_jepperson.ipynb
@@ -308,7 +308,7 @@
     "    test = X_test.iloc[i]\n",
     "    y_check = y_test.iloc[i]\n",
     "    \n",
-    "    y_inter = scipy_int.scipy_interpolation_linear(X_train_scipy, test)\n",
+    "    y_inter = scipy_int.scipy_interpolation_linear(X_train_scipy, test,'FUELFLOW')\n",
     "    \n",
     "    if np.isnan(y_inter)== True : #Extrapolate\n",
     "        y = X_train_scipy.FUELFLOW\n",
@@ -461,7 +461,7 @@
     "    test = X_test.iloc[i]\n",
     "    y_check = y_test.iloc[i]\n",
     "    \n",
-    "    y_inter = scipy_int.scipy_interpolation_nearest(X_train_scipy, test)\n",
+    "    y_inter = scipy_int.scipy_interpolation_nearest(X_train_scipy, test,'FUELFLOW')\n",
     "\n",
     "    output[i,0] = y_check\n",
     "    output[i,1] = y_inter.iloc[0]\n",
