code to jepersen first iteration

--- a/testing/Speed_limit.ipynb
+++ b/testing/Speed_limit.ipynb
@@ -107,7 +107,7 @@
    "source": [
     "group_min = df.groupby(['DISA', 'ALTITUDE', 'MASS']).min()\n",
     "group_max = df.groupby(['DISA', 'ALTITUDE', 'MASS']).max()\n",
-    "\n",
+    " sla\n",
     "df_group = pd.DataFrame(index=range(len(group_min)),columns=range(5))\n",
     "\n",
     "for i in range(len(out)):\n",
